# throne-light

./: ._.env  .env.example  .gitignore  LAUNCH_REQUIREMENTS.md  MACOS_IOS_BUILD_GUIDE.md  NATIVE_APP_BUILD.md  NOTARIZATION_SETUP.md  README.md  SYSTEM-OVERVIEW-FOR-EXECUTIVE-AI.md  TTS_SETUP.md  next.config.mjs  nixpacks.toml  package-lock.json  package.json  railway.json  tailwind.config.ts  tauri-build.sh
.github/workflows/: release.yml
data/: db.json
prisma/: schema.prisma
public/: manifest.json  offline.html  sw.js
public/downloads/: .gitkeep  Throne-Light-Reader-macOS-v1.0.2.dmg  Throne-Light-Reader-macOS-v1.0.4.dmg
scripts/: generate-tauri-icons.js
src/: middleware.ts
src-tauri/: ._target  Cargo.toml  Info.ios.plist  entitlements-minimal.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/data/: seed-reviews.ts
src/hooks/: useAudioSync.ts
src/lib/: admin-roles.ts  adminAuth.ts  auth.ts  authMiddleware.ts  copyright.ts  db-supabase.ts  db.ts  email-campaigns-supabase.ts  email-campaigns.ts  email.ts  payout-calculator.ts  reader-licensing.ts  reader-translations.ts  supabase.ts  team-member-roles.ts  translate.ts
src/types/: react-simple-maps.d.ts
supabase/migrations/: 001_audio_segments.sql  002_partner_feedback.sql  003_active_readers.sql  004_geocoding.sql  005_reader_support_tickets.sql  006_core_business_data.sql  007_email_campaigns.sql  008_reader_licensing.sql  009_add_page_path_to_tracking.sql  009_partner_onboarding.sql  010_security_hardening.sql  (+2 more)
(+175 files in other folders)
