[package]
name = "throne-light-reader"
version = "1.0.0"
description = "Throne Light Reader - Your Royal Library"
authors = ["Throne Light Publishing"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
